--- a/ui/main.ui
+++ b/ui/main.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1203</width>
-    <height>812</height>
+    <width>1200</width>
+    <height>800</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1200</width>
+    <height>800</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>800</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -63,7 +75,7 @@
            <string>Elo N</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_2">
+         <widget class="QLineEdit" name="le_Negre">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -73,7 +85,7 @@
            </rect>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_4">
+         <widget class="QLineEdit" name="le_EloN">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -135,7 +147,7 @@
            <string>Titol_N</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit">
+         <widget class="QLineEdit" name="le_Blanc">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -158,7 +170,7 @@
            <string>Blanc</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_3">
+         <widget class="QLineEdit" name="le_EloB">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -207,7 +219,7 @@
            <string>Torneig</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_8">
+         <widget class="QLineEdit" name="le_Lloc">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -246,7 +258,7 @@
            <string>FIDE_id_B</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_10">
+         <widget class="QLineEdit" name="le_Torneig">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -285,7 +297,7 @@
            <string>Lloc</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_11">
+         <widget class="QLineEdit" name="le_FIDEB">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -298,7 +310,7 @@
            <string/>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_12">
+         <widget class="QLineEdit" name="le_FIDEN">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -309,32 +321,6 @@
           </property>
           <property name="text">
            <string/>
-          </property>
-         </widget>
-         <widget class="QToolButton" name="toolButton_3">
-          <property name="geometry">
-           <rect>
-            <x>240</x>
-            <y>20</y>
-            <width>31</width>
-            <height>22</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-         <widget class="QToolButton" name="toolButton_4">
-          <property name="geometry">
-           <rect>
-            <x>240</x>
-            <y>50</y>
-            <width>31</width>
-            <height>22</height>
-           </rect>
-          </property>
-          <property name="text">
-           <string>...</string>
           </property>
          </widget>
          <widget class="Line" name="line">
@@ -350,7 +336,7 @@
            <enum>Qt::Orientation::Horizontal</enum>
           </property>
          </widget>
-         <widget class="QDateEdit" name="dateEdit">
+         <widget class="QDateEdit" name="de_Data">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -358,6 +344,25 @@
             <width>121</width>
             <height>22</height>
            </rect>
+          </property>
+          <property name="dateTime">
+           <datetime>
+            <hour>0</hour>
+            <minute>0</minute>
+            <second>0</second>
+            <year>2000</year>
+            <month>1</month>
+            <day>4</day>
+           </datetime>
+          </property>
+          <property name="displayFormat">
+           <string>ddMM/yyyy</string>
+          </property>
+          <property name="calendarPopup">
+           <bool>true</bool>
+          </property>
+          <property name="currentSectionIndex">
+           <number>2</number>
           </property>
          </widget>
          <widget class="QLabel" name="label_10">
@@ -373,7 +378,7 @@
            <string>Ronda</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_13">
+         <widget class="QLineEdit" name="le_Ronda">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -389,10 +394,10 @@
          <widget class="QLabel" name="label_11">
           <property name="geometry">
            <rect>
-            <x>170</x>
+            <x>160</x>
             <y>320</y>
-            <width>49</width>
-            <height>15</height>
+            <width>41</width>
+            <height>16</height>
            </rect>
           </property>
           <property name="text">
@@ -412,7 +417,7 @@
            <enum>Qt::Orientation::Horizontal</enum>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_18">
+         <widget class="QLineEdit" name="le_Obertura">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -477,7 +482,7 @@
            <string>Obertura</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_22">
+         <widget class="QLineEdit" name="le_Variacio">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -490,7 +495,7 @@
            <string/>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_17">
+         <widget class="QLineEdit" name="le_ECO">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -503,7 +508,7 @@
            <string/>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_15">
+         <widget class="QLineEdit" name="le_FEN">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -516,7 +521,7 @@
            <string/>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_19">
+         <widget class="QLineEdit" name="le_Ritme">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -555,7 +560,7 @@
            <string>Ritme</string>
           </property>
          </widget>
-         <widget class="QComboBox" name="comboBox">
+         <widget class="QComboBox" name="cb_Variant">
           <property name="geometry">
            <rect>
             <x>70</x>
@@ -564,18 +569,48 @@
             <height>23</height>
            </rect>
           </property>
+          <item>
+           <property name="text">
+            <string>Normal</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Escacs960</string>
+           </property>
+          </item>
          </widget>
-         <widget class="QComboBox" name="comboBox_2">
+         <widget class="QComboBox" name="cb_Resultat">
           <property name="geometry">
            <rect>
-            <x>210</x>
+            <x>200</x>
             <y>320</y>
-            <width>61</width>
+            <width>71</width>
             <height>23</height>
            </rect>
           </property>
+          <item>
+           <property name="text">
+            <string>cap</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1/2 - 1/2</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>1-0</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>0-1</string>
+           </property>
+          </item>
          </widget>
-         <widget class="QComboBox" name="comboBox_3">
+         <widget class="QComboBox" name="cb_TitBlanc">
           <property name="geometry">
            <rect>
             <x>210</x>
@@ -584,16 +619,44 @@
             <height>23</height>
            </rect>
           </property>
-         </widget>
-         <widget class="QComboBox" name="comboBox_4">
-          <property name="geometry">
-           <rect>
-            <x>210</x>
-            <y>110</y>
-            <width>61</width>
-            <height>23</height>
-           </rect>
+          <property name="editable">
+           <bool>true</bool>
           </property>
+          <item>
+           <property name="text">
+            <string>cap</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>MC</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>WFM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>WGM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>FM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>IM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>GM</string>
+           </property>
+          </item>
          </widget>
          <widget class="Line" name="line_3">
           <property name="geometry">
@@ -647,7 +710,7 @@
            <string>Anotador</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_20">
+         <widget class="QLineEdit" name="le_Comentarista">
           <property name="geometry">
            <rect>
             <x>80</x>
@@ -660,7 +723,7 @@
            <string/>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_21">
+         <widget class="QLineEdit" name="le_numPartida">
           <property name="geometry">
            <rect>
             <x>120</x>
@@ -670,7 +733,7 @@
            </rect>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_23">
+         <widget class="QLineEdit" name="le_Capitol">
           <property name="geometry">
            <rect>
             <x>80</x>
@@ -696,7 +759,7 @@
            <string>Nom Estudi</string>
           </property>
          </widget>
-         <widget class="QLineEdit" name="lineEdit_24">
+         <widget class="QLineEdit" name="le_Estudi">
           <property name="geometry">
            <rect>
             <x>80</x>
@@ -708,6 +771,80 @@
           <property name="text">
            <string/>
           </property>
+         </widget>
+         <widget class="QPushButton" name="bt_B">
+          <property name="geometry">
+           <rect>
+            <x>240</x>
+            <y>20</y>
+            <width>31</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>B</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="bt_N">
+          <property name="geometry">
+           <rect>
+            <x>240</x>
+            <y>50</y>
+            <width>31</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>N</string>
+          </property>
+         </widget>
+         <widget class="QComboBox" name="cb_TitNegre">
+          <property name="geometry">
+           <rect>
+            <x>210</x>
+            <y>110</y>
+            <width>61</width>
+            <height>23</height>
+           </rect>
+          </property>
+          <property name="editable">
+           <bool>true</bool>
+          </property>
+          <item>
+           <property name="text">
+            <string>cap</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>MC</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>WFM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>WGM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>FM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>IM</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>GM</string>
+           </property>
+          </item>
          </widget>
         </widget>
        </item>
@@ -734,7 +871,7 @@
          <property name="frameShadow">
           <enum>QFrame::Shadow::Raised</enum>
          </property>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="bt_SalvaNova">
           <property name="geometry">
            <rect>
             <x>100</x>
@@ -747,7 +884,7 @@
            <string>Guarda Nova</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="bt_substituir">
           <property name="geometry">
            <rect>
             <x>10</x>
@@ -760,7 +897,7 @@
            <string>Reemplaça</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_3">
+         <widget class="QPushButton" name="bt_Neteja">
           <property name="geometry">
            <rect>
             <x>190</x>
@@ -797,9 +934,25 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
-           <widget class="QTableWidget" name="tableWidget">
+           <widget class="QTableWidget" name="tw_LlistaPartides">
             <property name="styleSheet">
              <string notr="true">background-color: rgb(153, 193, 241);</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QTextEdit" name="te_PGN">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>220</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>16777215</width>
+              <height>220</height>
+             </size>
             </property>
            </widget>
           </item>
@@ -829,20 +982,20 @@
          <property name="frameShadow">
           <enum>QFrame::Shadow::Raised</enum>
          </property>
-         <widget class="QPushButton" name="pushButton_8">
+         <widget class="QPushButton" name="bt_salvaNouPGN">
           <property name="geometry">
            <rect>
-            <x>570</x>
+            <x>550</x>
             <y>10</y>
-            <width>80</width>
+            <width>91</width>
             <height>21</height>
            </rect>
           </property>
           <property name="text">
-           <string>Salva nou PGNç</string>
+           <string>Salva nou PGN</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_4">
+         <widget class="QPushButton" name="bt_llegirPGN">
           <property name="geometry">
            <rect>
             <x>130</x>
@@ -855,7 +1008,7 @@
            <string>Carrega PGN</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_5">
+         <widget class="QPushButton" name="bt_editaPartida">
           <property name="geometry">
            <rect>
             <x>240</x>
@@ -868,7 +1021,7 @@
            <string>Edita Partida</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_9">
+         <widget class="QPushButton" name="bt_Filtres">
           <property name="geometry">
            <rect>
             <x>670</x>
@@ -881,10 +1034,10 @@
            <string>Filtres</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_6">
+         <widget class="QPushButton" name="bt_EsborraPartida">
           <property name="geometry">
            <rect>
-            <x>350</x>
+            <x>340</x>
             <y>10</y>
             <width>80</width>
             <height>21</height>
@@ -894,10 +1047,10 @@
            <string>Esborra</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="pushButton_7">
+         <widget class="QPushButton" name="bt_salvaPGN">
           <property name="geometry">
            <rect>
-            <x>460</x>
+            <x>440</x>
             <y>10</y>
             <width>80</width>
             <height>21</height>
@@ -905,6 +1058,19 @@
           </property>
           <property name="text">
            <string>Salva PGN</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="bt_Sortir">
+          <property name="geometry">
+           <rect>
+            <x>770</x>
+            <y>10</y>
+            <width>80</width>
+            <height>21</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>Sortir</string>
           </property>
          </widget>
         </widget>
