--- a/ui/main.ui
+++ b/ui/main.ui
@@ -353,9 +353,9 @@
             <hour>0</hour>
             <minute>0</minute>
             <second>0</second>
-            <year>2000</year>
-            <month>1</month>
-            <day>1</day>
+            <year>1999</year>
+            <month>12</month>
+            <day>31</day>
            </datetime>
           </property>
           <property name="displayFormat">
@@ -995,7 +995,7 @@
             <widget class="QPushButton" name="bt_salvaSQ3">
              <property name="geometry">
               <rect>
-               <x>530</x>
+               <x>430</x>
                <y>10</y>
                <width>91</width>
                <height>21</height>
@@ -1021,9 +1021,9 @@
             <widget class="QPushButton" name="bt_editaPartidaSQ3">
              <property name="geometry">
               <rect>
-               <x>550</x>
+               <x>440</x>
                <y>40</y>
-               <width>80</width>
+               <width>101</width>
                <height>21</height>
               </rect>
              </property>
@@ -1031,11 +1031,11 @@
               <string>Edita Partida</string>
              </property>
             </widget>
-            <widget class="QPushButton" name="bt_FiltresSQ3">
+            <widget class="QPushButton" name="bt_Filtres">
              <property name="geometry">
               <rect>
-               <x>640</x>
-               <y>40</y>
+               <x>660</x>
+               <y>30</y>
                <width>80</width>
                <height>21</height>
               </rect>
@@ -1047,8 +1047,8 @@
             <widget class="QPushButton" name="bt_esborraPartidaPGN">
              <property name="geometry">
               <rect>
-               <x>300</x>
-               <y>10</y>
+               <x>230</x>
+               <y>40</y>
                <width>51</width>
                <height>21</height>
               </rect>
@@ -1074,7 +1074,7 @@
              <property name="geometry">
               <rect>
                <x>780</x>
-               <y>40</y>
+               <y>20</y>
                <width>61</width>
                <height>31</height>
               </rect>
@@ -1099,7 +1099,7 @@
             <widget class="QPushButton" name="pushButton">
              <property name="geometry">
               <rect>
-               <x>430</x>
+               <x>320</x>
                <y>40</y>
                <width>111</width>
                <height>21</height>
@@ -1112,7 +1112,7 @@
             <widget class="QPushButton" name="bt_llegeixSQ3">
              <property name="geometry">
               <rect>
-               <x>430</x>
+               <x>320</x>
                <y>10</y>
                <width>91</width>
                <height>21</height>
@@ -1125,7 +1125,7 @@
             <widget class="QPushButton" name="bt_novaSQ3">
              <property name="geometry">
               <rect>
-               <x>630</x>
+               <x>540</x>
                <y>10</y>
                <width>80</width>
                <height>21</height>
@@ -1161,24 +1161,11 @@
               <string>Edita Partida</string>
              </property>
             </widget>
-            <widget class="QPushButton" name="bt_FiltresPGN">
-             <property name="geometry">
-              <rect>
-               <x>230</x>
-               <y>40</y>
-               <width>80</width>
-               <height>21</height>
-              </rect>
-             </property>
-             <property name="text">
-              <string>Filtres</string>
-             </property>
-            </widget>
             <widget class="QPushButton" name="bt_esborraPartidaSQ3">
              <property name="geometry">
               <rect>
-               <x>720</x>
-               <y>10</y>
+               <x>570</x>
+               <y>40</y>
                <width>51</width>
                <height>21</height>
               </rect>
